--- a/contacto.html
+++ b/contacto.html
@@ -91,9 +91,7 @@
                     </p>
                     <p>
                         <i class="fas fa-map-marker-alt icon"></i> <strong>Oficinas:</strong><br>
-                        Edificio PITA, Av. de la Innovación, 15<br>
-                        Parque Científico-Tecnológico (PITA)<br>
-                        Almería, España
+                        Universidad de Granada
                     </p>
                     <img src="https://picsum.photos/seed/map/600/300" alt="Mapa de localización" style="border-radius: var(--border-radius); margin-top: 1rem; width: 100%;">
                 </div>
@@ -135,4 +133,5 @@
 
     <script src="js/main.js"></script>
 </body>
+
 </html>
