--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BioFlux - Tecnologías para la eliminación de metales pesados</title>
+    <link rel="icon" type="image/png" href="img/logo.png"> <link rel="stylesheet" href="css/style.css">	
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -185,4 +186,5 @@
 
     <script src="js/main.js"></script>
 </body>
+
 </html>
