--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuestra Tecnología - BioFlux</title>
+    <title>Contacto</title>
+    <link rel="icon" type="image/png" href="img/logo.png"> <link rel="stylesheet" href="css/style.css">	
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -134,4 +135,5 @@
 </body>
 
 </html>
+
 
